Try fix use of vue-cli during publish

--- a/VueSpaDemo/VueSpaDemo.csproj
+++ b/VueSpaDemo/VueSpaDemo.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <Target Name="Bundle" BeforeTargets="BeforePublish">
+    <Exec Command="npm install --dev" />
     <Exec Command="npm run-script build" />
   </Target>
   
