Change npm install syntax to avoid deprecated warning.

--- a/VueSpaDemo/VueSpaDemo.csproj
+++ b/VueSpaDemo/VueSpaDemo.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <Target Name="Bundle" BeforeTargets="BeforePublish">
-    <Exec Command="npm install --dev" />
+    <Exec Command="npm install --also=dev" />
     <Exec Command="npm run-script build" />
   </Target>
   
